<resources>
    <string name="app_name">Seedbed</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="alreadyaccount">Do you have already an account? Login</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="logo">Twitter</string>
    <string name="foto">Tape the profile icon to choose a picture</string>
    <string name="profile_icon">Profile_icon</string>
    <string name="profile_enterdisplay">EnterDisplayName</string>
    <string name="save">Save</string>
    <string name="nav_home">Home</string>
    <string name="nav_historical">Historical Data</string>
    <string name="nav_profile">Profile</string>
    <string name="Seedbed">Seedbed</string>
    <string name="clickToVerify"> Email Not Verified (Click to Verify)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HOME">Home</string>
    <string name="Actuators">Actuators</string>
    <string name="LogOut">LogOut</string>
    <string name="Activity2">Activity2</string>
    <string name="more">more</string>
    <string name="content_description_more">content_description_more</string>
    <string name="search">search</string>
    <string name="content_description_search">content_description_search</string>
    <string name="content_description_email">content_description_email</string>
    <string name="Help">Help</string>
    <string name="Activity1">Activity1</string>
    <string name="temperature">Temperature</string>
    <string name="humidityair">Humidity Air</string>
    <string name="HumidityGround">Ground</string>
    <string name="LDR">LDR</string>
    <string name="Co2">Co2</string>
    <string name="forgotPassword">Have you forgot your password?</string>
    <string name="insertNewPassword">Insert new password</string>
    <string name="sendNewPassword">Send new Password</string>
    <string name="startDate">START DATE</string>
    <string name="Save">Save</string>
    <string name="typeOfcrop">Select type Of Crop</string>
    <string name="background">background</string>
    <string name="Verified">Verified</string>
    <string name="Swipw">Swipe</string>
    <string name="EnterDisplayName">Enter Display Name</string>
    <string name="channel_name">Notifications</string>
    <string name="channel_description">Alarms Seedbed</string>
    <string name="msg_token_fmt">Token Value=</string>
    <string name="Loading">Loading...</string>
    <string name="CONTROLS">CONTROLS</string>
    <string name="PUMP">PUMP</string>
    <string name="LIGHTS">LIGHTS</string>
    <string name="VENTILATOR">VENTILATOR</string>
    <string name="HUMIDIFIER">HUMIDIFIER</string>
    <string name="switch_text">POWER</string>
    <string name="ACTUATORS">ACTUATORS</string>
    <string name="ALARMS">ALARMS</string>
    <string name="STATUS">STATUS</string>
    <string name="GAS">GAS</string>
    <string name="WATERLEVEL">WATER LEVEL</string>
    <string name="pepper">Pepper</string>
    <string name="cucumber">Cucumber</string>
    <string name="aubergine">Aubergine</string>
    <string name="Tomato">Tomato</string>
    <string name="selectCrop">Select type of Crop</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="endPoint">END DATE</string>
    <string name="maxMoisture">Max Ground Humidity %</string>
    <string name="averageMoisture">Average %</string>
    <string name="DayMaxHumidityGround">Day max Humidity</string>
    <string name="points">----</string>
    <string name="show_values">SHOW VALUES</string>
    <string name="DayMaxTemperature">Day Max Temperature</string>
    <string name="maxTemperature">Max Temp ºC</string>
    <string name="DayMaxLDR">Day max LDR</string>
    <string name="averageLDR">Average lux</string>
    <string name="maxLDR">Max lux</string>
    <string name="maxCO2">Max CO2 ppm</string>
    <string name="averageCO2">Average CO2 ppm</string>
    <string name="DayMaxCO2">Max Day CO2</string>
    <string name="averageTemperature">Average ºC</string>
    <string name="Historical">Historical Data</string>
    <string name="Press">Press</string>
    <string name="Analytics">Analytics</string>
    <string name="Info">Info</string>

</resources>
